# UnityMCP

./: .gitignore  LICENSE  README.md  ROADMAP.md
UnityCodexMcp/: .gitignore  README.md
UnityCodexMcp/examples/: codex-mcp.example.json
UnityCodexMcp/server/: pyproject.toml
UnityCodexMcp/server/codex_unity_mcp/: server.py  unity_client.py
docs/: AGENT_INSTRUCTIONS.md  DEVELOPMENT.md  EXAMPLES.md  INSTALLATION.md  MCP_TOOLS.md  SECURITY.md  WORKFLOWS.md
examples/: codex-config.example.toml  codex-mcp.example.json  generic-mcp-command.example.txt  unity-manifest-git.example.json
scripts/: install-codex-mcp.ps1  setup-unity-mcp-server.ps1
server/: pyproject.toml  run.ps1
server/codex_unity_mcp/: __init__.py  server.py  unity_client.py
