[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-unity-mcp"
version = "0.1.0"
description = "MCP server that exposes a local Unity Editor scene bridge to Codex."
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.9.0"
]

[project.scripts]
codex-unity-mcp = "codex_unity_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
